# mussuite

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmakelists.txt
docs/: internal_data.md  mus_songs.md
src/: main.cpp
